--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@ body {
 
 /* Waveform Visualizer */
 .waveform-container {
-  margin-top: 16px;
-  height: 50px;
+  margin-top: 4px;
+  height: 30px;
   position: relative;
   overflow: hidden;
 }
@@ -360,7 +360,7 @@ body {
   display: flex;
   justify-content: center;
   gap: 16px;
-  margin-top: 16px;
+  margin-top: 4px;
 }
 
 .transport-btn {
@@ -880,13 +880,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px;
-  margin-top: 12px;
-  padding: 8px 16px;
+  gap: 6px;
+  margin: 6px 0 0 0;
+  padding: 5px 10px;
   background: linear-gradient(135deg, rgba(212, 175, 55, 0.1), rgba(155, 126, 217, 0.08));
   border: 1px solid rgba(212, 175, 55, 0.2);
-  border-radius: 12px;
-  font-size: 11px;
+  border-radius: 10px;
+  font-size: 10px;
   color: var(--accent-gold);
 }
 
