--- a/index.html
+++ b/index.html
@@ -1456,38 +1456,44 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 30px;
+  height: 3px;
   overflow: hidden;
-  opacity: 0.3;
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 .melodic-wave {
   position: absolute;
-  bottom: -10px;
+  bottom: 0;
   left: 0;
-  width: 200%;
-  height: 20px;
-  background: repeating-linear-gradient(
-    90deg,
-    transparent,
-    transparent 10px,
-    rgba(232, 180, 184, 0.3) 10px,
-    rgba(232, 180, 184, 0.3) 20px
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, 
+    transparent 0%,
+    var(--accent-rose) 50%,
+    transparent 100%
   );
-  animation: wave-flow 4s linear infinite;
+  background-size: 50% 100%;
+  animation: none;
 }
 
-@keyframes wave-flow {
-  from { transform: translateX(0); }
-  to { transform: translateX(-50%); }
+@keyframes pulse-wave {
+  0%, 100% { 
+    background-position: -50% 0;
+    opacity: 0.5;
+  }
+  50% { 
+    background-position: 150% 0;
+    opacity: 1;
+  }
 }
 
-.melodic-card.active .melodic-wave-indicator {
-  opacity: 0.6;
+.melodic-card.playing .melodic-wave-indicator {
+  opacity: 1;
 }
 
 .melodic-card.playing .melodic-wave {
-  animation-duration: 1s;
+  animation: pulse-wave 2s ease-in-out infinite;
 }
 </style>
 </head>
